[package]
name = "nuklear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nuklear"
path = "src/main.rs"

[lib]
name = "nuklear"
path = "src/main.rs"

[dependencies]
# physics and math
uom = { version = "0.35.0", default-features = false, features = [
    "f64",
    "si",
    "std",
] }
typenum = "1.17.0"
nalgebra = "0.32.3"
num-complex = "0.4.4"

# graphs
petgraph = "0.6.4"

# util
lazy_static = "1.4.0"
interior_mut = { git = "https://github.com/ISibboI/interior-mut", rev = "4a18e35c49f37d480b3d9be17794a9e95d44a593" }

# error handling
thiserror = "1.0.50"

# logging
log = "0.4.20"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
